リンクの追加

--- a/src/templete/access.pug
+++ b/src/templete/access.pug
@@ -6,4 +6,7 @@ html(lang="ja")
     meta(http-equiv="X-UA-Compatible" content="IE=edge")
     title Access
   body
+    div
+      a(href="./access.html") access.html
+      a(href="./index.html") index.html
     h1 Access page!
