--- a/src/templete/index.pug
+++ b/src/templete/index.pug
@@ -6,6 +6,9 @@ html(lang="ja")
     meta(http-equiv="X-UA-Compatible" content="IE=edge")
     title Template HTML
   body
+    div
+     a(href="./access.html") access.html
+     a(href="./index.html") index.html
     h1 Hello,Wordl!
     img(src="../image/icon.jpg")
     img(src="../image/thumb.png")
