--- a/src/templete/access.pug
+++ b/src/templete/access.pug
@@ -6,7 +6,5 @@ html(lang="ja")
     meta(http-equiv="X-UA-Compatible" content="IE=edge")
     title Access
   body
-    div
-      a(href="./access.html") access.html
-      a(href="./index.html") index.html
+    include _menu.pug
     h1 Access page!
