--- a/src/templete/index.pug
+++ b/src/templete/index.pug
@@ -1,12 +1,5 @@
-doctype html
-html(lang="ja")
-  head
-    meta(charset="UTF-8")
-    meta(name="viewport" content="width=device-width, initial-scale=1.0")
-    meta(http-equiv="X-UA-Compatible" content="IE=edge")
-    title Template HTML
-  body
-    include _menu.pug
-    h1 Hello,Wordl!
-    img(src="../image/icon.jpg")
-    img(src="../image/thumb.png")
+extends _layout.pug
+block content
+  h1 Hello,Wordl!
+  img(src="../image/icon.jpg")
+  img(src="../image/thumb.png")
