--- a/src/templete/index.pug
+++ b/src/templete/index.pug
@@ -1,4 +1,8 @@
 extends _layout.pug
+
+block locals
+  - var title = "Hello Pug!"
+
 block content
   h1 Hello,Wordl!
   img(src="../image/icon.jpg")
