--- a/src/templete/index.pug
+++ b/src/templete/index.pug
@@ -4,6 +4,6 @@ block locals
   - var title = "Hello Pug!"
 
 block content
-  h1 Hello,Wordl!
+  h1 Hello,Wordl!!!!
   img(src="../image/icon.jpg")
   img(src="../image/thumb.png")
