--- a/src/templete/index.pug
+++ b/src/templete/index.pug
@@ -5,5 +5,6 @@ block locals
 
 block content
   h1 Hello,Wordl!!!!
+  div#react-root
   img(src="../image/icon.jpg")
   img(src="../image/thumb.png")
